# software-architect-blueprints

./: .flake8  .gitignore  README.md
eshop/: README.md
eshop/backend/: package-lock.json  package.json  tsconfig.json
eshop/backend/src/: package-lock.json  server.ts
eshop/backend/src/models/: Order.ts  Product.ts  ShoppingCart.ts  ShoppingCartItem.ts
eshop/backend/src/routes/: cart.ts  orders.ts  products.ts  store.ts
eshop/docs/: development.md  requirements.md  use-cases-scenarios.md
eshop/test/backend/: test.sh
eshop/ui/: package-lock.json  package.json
eshop/ui/src/: App.tsx  index.tsx  setupProxy.js
eshop/ui/src/components/: Navbar.tsx
eshop/ui/src/context/: CartContext.tsx
eshop/ui/src/pages/: Cart.tsx  Orders.tsx  Products.tsx
eshop/ui/src/services/: api.ts
strava-like/: README.md
strava-like/docs/: architecture.md  component-design.md  design-decision.md  devops.md  extensibility.md  observability.md  performance.md  requirements.md  scalability.md  security.md  takeaway.md  testing.md  use-case-scenario.md  use-case.md
strava-like/docs/auth/: auth.md
strava-like/docs/img/: architecture.drawio  component-design.pptx  er-diagram.drawio
strava-like/src/auth-service/: config.py  database.py  main.py  pyproject.toml
strava-like/src/auth-service/models/: user.py  user_role_link.py
strava-like/src/auth-service/schemas/: user.py
strava-like/src/auth-service/services/: auth.py
strava-like/src/auth-service/utils/: security.py
strava-like/src/auth_service/: Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml
(+10 files in other folders)
