[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "Simple Auth Service for a Strava-like app using FastAPI"
license = "MIT"
name = "auth-service"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

# Web framework
fastapi = "^0.115.12"
uvicorn = "^0.34.3"

# Database
sqlalchemy = "^2.0.41"
sqlmodel = "^0.0.24"

# JWT + password hashing
bcrypt = "^4.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"

# Email sending (optional, for future use)
aiosmtplib = "^4.0.1"
email-validator = "^2.2.0"

# Env config (optional)
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
httpx = "^0.27.0"
ipython = "^8.24.0"
mypy = "^1.10.0"
pytest = "^8.2.2"
ruff = "^0.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
